<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:background="@drawable/border"
    android:padding="16dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:contentDescription="Image"
        />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/item_image"
        android:gravity="center_vertical"
        android:text="bruh"
        android:textSize="22sp"
        android:layout_marginStart="16dp"
        />

    <ImageButton
        android:id="@+id/item_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_delete"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Delete"
        />

</RelativeLayout>